--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/abstract.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/abstract.tex
@@ -3,12 +3,17 @@
 \begin{frame}{提案の概要}
     \begin{itemize}
         \item  ロボットシステムは通常, リアルタイムの制約を受ける
-\item それでも, オープンソースのロボティクスソフトウェアの最も人気のあるリポジトリである ROS エコシステムは, 最悪応答時間を制限または制御するためにリアルタイム理論を使用したという証明をほとんど示していない
-\item 導入のハードルは, リアルタイムスケジューリングメカニズムを正しく使用するために必要な専門知識の量と, 静的なプロビジョニングを無視する一般的なロボット工学のワークロードに固有の予測不可能性である
-\item これらのハードルを克服するために, ROS 2 の自動レイテンシマネージャーである ROS-Llama が提案されている
-\item 重要なことに, ROS-Llama の使用には, リアルタイムの概念に関するわずかな労力と知識しか必要ない
-\item ROS 2 の関連するプロパティとロボティクスドメインの必須要件が特定され, そのようなほぼ自動化されたツールを開発する際の概念的および実際的な課題が議論される
-\item モバイルロボットでの実験は, このアプローチの実行可能性を実証し, ROS-Llama がデフォルトの Linux スケジューラと比較して, 負荷がかかった状態で観察された最大レイテンシを削減することを示している
-\item 最後に, 基礎となるリアルタイム分析の未解決の問題と, Linux および ROS 2 の主要なプラットフォームの制限により, さらなる改善が妨げられていることが特定されている
+        \item それでも, オープンソースのロボティクスソフトウェアの最も人気のあるリポジトリである ROS エコシステムは, 最悪応答時間を制限または制御するためにリアルタイム理論を使用したという証明をほとんど示していない
+        \item 導入のハードルは, リアルタイムスケジューリングメカニズムを正しく使用するために必要な専門知識の量と, 静的なプロビジョニングを無視する一般的なロボット工学のワークロードに固有の予測不可能性である
+        \item これらのハードルを克服するために, ROS 2 の自動レイテンシマネージャーである ROS-Llama が提案されている
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{提案の概要}
+    \begin{itemize}
+        \item 重要なことに, ROS-Llama の使用には, リアルタイムの概念に関するわずかな労力と知識しか必要ない
+        \item ROS 2 の関連するプロパティとロボティクスドメインの必須要件が特定され, ほぼ自動化されたツールを開発する際の概念的・実際的な課題が議論される
+        \item モバイルロボットでの実験は, このアプローチの実行可能性を実証し, ROS-Llama がデフォルトの Linux スケジューラと比較して, 負荷がかかった状態で観察された最大レイテンシを削減することを示している
+        \item 最後に, 基礎となるリアルタイム分析の未解決の問題と, Linux および ROS 2 の主要なプラットフォームの制限により, さらなる改善が妨げられていることが特定されている
     \end{itemize}
 \end{frame}
