--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/automatic_latency_management.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/automatic_latency_management.tex
@@ -1,104 +1,100 @@
 % !TeX root = main.tex
 
-\section{AUTOMATIC LATENCY MANAgEMENT}
+\section{AUTOMATIC LATENCY MANAGEMENT}
 \label{sec: automatic latency management}
 
 \begin{frame}{}
     \begin{itemize}
-        \item セクションで主張したように
-\item ロボティクスの領域には, これまでリアルタイムシステムコミュニティであまり注目されていなかった特定の要件と制約が伴いる
-\item ロボット工学全般, 特に ROS のコンテキストにおける自動レイテンシ管理の問題の困難な性質を文書化するために, ROS-Llama の設計を導いた ROS ワークロードの最も注目すべき側面を強調する
+        \item SecI で論じたように, ロボット工学の領域には, これまでリアルタイムシステムのコミュニティであまり注目されてこなかった特定の要件と制約がある
+        \item 一般的なロボット工学, 特にROSのコンテキストにおける自動レイテンシ管理問題の困難な性質を記録するために, ROS-Llamaの設計を導いたROSワークロードの最も注目すべき側面を強調する
     \end{itemize}
 \end{frame}
 
 \begin{frame}{形式は機能に従わない}
     \begin{itemize}
         \item 従来のリアルタイムの文献では, システムの機能と要件が, OS レベルで実行可能なタスクのセットとして実装にきちんと反映されていると想定するのが一般的である
-\item 同様に, 応答時間, 優先度, 重要度などの中心的な概念は通常, 特定のタスクに関連付けられているため, 特定の機能の正確なタイミングを確保する問題は, 対応するタスクを適切にプロビジョニングする問題と同等であると暗黙のうちに理解されている
+        \item そのため, 応答時間, 優先度, 重要度などの中心的な概念は通常, 特定のタスクに関連付けられているため, 特定の機能の正確なタイミングを確保する問題は, 対応するタスクを適切にプロビジョニングする問題と同等であると暗黙のうちに理解されている
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{形式は機能に従わない}
     \begin{itemize}
-        \item Secs から明らかなように
-\item I と II のように, これは ROS ではほとんど当てはまらない: レイテンシが重要な機能が単一のコンポーネントに含まれることはめったになく, 原因と結果のチェーンは通常, 多くのエグゼキュータ (したがってスレッド) にまたがり, 共有エグゼキュータは, 非常に異なるレイテンシを持つ複数のチェーンを頻繁に提供する
-\item ニーズとアクティベーションパターンしたがって, レイテンシマネージャーは ROS システムを全体的に考慮する必要があり, 個々のタスク, スレッド, または他の OS エンティティを分離してプロビジョニングすることはできない
+        \item 第I章と第II章から明らかなように, ROSではこのようなことはほとんどない
+        \item レイテンシが重要な機能が単一のコンポーネントに含まれることはほとんどなく, 因果関係の連チェーンは通常多くのエグゼキュータ（したがってスレッド）にまたがり, 共有エグゼキュータは頻繁に, 大きく異なるレイテンシニーズとアクティベーションパターンを持つ複数の連チェーンに対応しています
+        \item したがって, レイテンシマネージャは, ROSシステムを全体的に考慮しなければならず, 個々のタスク, スレッド, または他のOSエンティティを分離してプロビジョニングすることはできません
     \end{itemize}
 \end{frame}
 
 \begin{frame}{害を与えない}
     \begin{itemize}
-        \item ROS が人気があるのは, 経験的に, 多くのワークロードに対して (十分に) うまく機能するからである
-\item デフォルトでは, ROS は Linux のベストエフォート CFS スケジューラに依存しており, 設定は全く必要ない
-\item 明白なことを述べると, アクティブなレイテンシ管理は, CFS で観察されるよりもレイテンシ目標の遵守を悪化させるべきではない
-\item しかし, 構成が不十分なリアルタイムスケジューラは, デフォルトの CFS スケジューラよりもはるかにパフォーマンスが低下するため, これは思ったほど簡単ではない
-\item したがって, レイテンシマネージャーは自己認識し, 不確実な利益の構成変更を実行することを控える必要がある
+        \item ROSが人気なのは, 経験的に, 多くのワークロードに対してうまく（十分に）機能するからです.
+        \item デフォルトでは, ROSはLinuxのベストエフォート型CFSスケジューラに依存しており, 何の設定も必要ありません
+        \item 明白なことは, 能動的なレイテンシ管理は, CFSの下で観察されるよりもレイテンシ目標への準拠が悪くなってはいけないということです
+        \item しかし, 設定の悪いリアルタイムスケジューラは, デフォルトの CFS スケジューラよりはるかに悪い結果をもたらすので, 思ったほど簡単ではない
+        \item したがって, レイテンシマネージャは自己認識し, 不確実な利益のために設定を変更することは避けなければなりません.
     \end{itemize}
 \end{frame}
 
 \begin{frame}{エキゾチックなカーネルパッチがない}
     \begin{itemize}
-        \item 一般に, ロボット工学エンジニアは, より優れたリアルタイムサポートが約束されているという理由だけで, 公式にサポートされている「実戦テスト済み」のプラットフォームから切り替えることを望んでいない
-\item 予測可能性の向上が, ツールの不足, サポートの取得の難しさ, または (認識された) コードの成熟度の欠如を上回ることはめったにない
-\item これにより, カーネルのリアルタイム機能を強化する特注のパッチの使用が除外される
-\item したがって, 実用的な解決策は, ストック Linux カーネル (およびその広く使用されている PREEMPT\_RT バリアント) にある機能に限定される
+        \item ロボット工学のエンジニアは一般的に, より良いリアルタイムサポートが約束されているからといって, 公式にサポートされ, 「戦場でテストされた」プラットフォームから切り替えようとはしない
+        \item ツールの不足, サポートの入手の困難さ, コードの成熟度の低さ, 稀なバグや未試験のコーナーケースのリスクなどを上回る予測可能性を得ることはほとんどない
+        \item このため, カーネルのリアルタイム機能を拡張する特注のパッチを使用することはできない
+        \item したがって, 実用的な解決策は, 標準的なLinuxカーネル（およびその広く使われているPREEMPT RTバリアント）に見られる機能に限定される
     \end{itemize}
 \end{frame}
 
-\begin{frame}{普遍的なバイインなし}
+\begin{frame}{普遍的なbuy-inがない}
     \begin{itemize}
-        \item セクションで議論されているように
-\item I
-\item ROS エコシステムは本質的にヘテロジニアス混合であり, 開発は非同期でアジャイルな方法で進行し, 頻繁なコンポーネントの更新が特徴である
-\item したがって, 全ての (または任意の) コンポーネント開発者が特定のレイテンシ管理アプローチをサポートするために努力することを期待することは現実的ではない
-\item 特に, これは, 実用的なソリューションがソースレベルのアノテーションに依存したり, カスタム API の使用を前提にしたり, ROS の基本的な動作方法を変更したりできないことを意味する
+        \item SecI で議論したように, ROS のエコシステムは本質的に異種であり, 開発は頻繁なコンポーネントの更新によって特徴付けられる, 非同期でアジャイルな方法で進行する
+        \item したがって, 全ての（あるいは全ての）コンポーネント開発者が, 特定のレイテンシ管理手法のサポートに労力を費やすことを期待するのは現実的ではないし, システムインテグレータが, サポートが不足している部分を補うことを期待するのも妥当ではない
+        \item 特に, これは実用的なソリューションが, ソースレベルのアノテーションに依存したり, カスタムAPIの使用を前提にしたり, ROSの動作を根本的に変更したりできないことを意味する
     \end{itemize}
 \end{frame}
 
 \begin{frame}{採用の容易さ}
     \begin{itemize}
-        \item 同様に, レイテンシマネージャーは, システムインテグレーターが被る事前の構成と継続的なメンテナンスの負担を最小限に抑える必要がある
-\item これは, ベースラインの選択 (デフォルトの CFS スケジューラ) がセットアップを全く必要としないことを考えると特に当てはまります
-\item システムインテグレーターは, 通常, ロボットおよびミッション固有のエンドツーエンドレイテンシ要件について高レベルの理解を持っているが, さまざまな ROS コンポーネントがどのように正確に相互作用するか, それらがどのくらいの頻度で相互作用するかなど, 低レベルのシステム内部を知ることは合理的に期待できない
+        \item 同様に, レイテンシマネージャは, システムインテグレータが発生する初期設定と継続的なメンテナンスの負担を最小にする必要があります
+        \item 特に, CFS のデフォルトスケジューラであるベースラインは, 全く設定する必要がないことを考えると, これは真実です
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{採用の容易さ}
     \begin{itemize}
-        \item エグゼキュータの数, ROS エグゼキュータによるコールバックのスケジュール方法, または Linux のリアルタイムスケジューリング機能の詳細な動作方法
-\item したがって, 採用への障壁を最小限に抑えるために, 実用的なレイテンシマネージャーは, 事前の構成 (またはコストのかかる静的分析) ではなく動的なイントロスペクションに可能な限り依存し, メカニズム固有のオプションよりも宣言的な目標による構成を優先する必要がある
+        \item システムインテグレータは, 通常, ロボットとミッション固有のエンドツーエンドレイテンシ要件に関するハイレベルな理解を持っていますが, 様々なROSコンポーネントがどのように正確に相互作用し, どの程度の頻度で相互作用し, 何台の実行者が存在し, ROS実行者によってコールバックがスケジュールされるか, またはLinuxのリアルタイムスケジュール機能が詳細に機能するかなどの低レベルのシステム内部を知っていると期待するのは無理でしょう
+        \item 採用の障壁を最小にするために, 実用的なレイテンシマネージャは, したがって, アップフロント設定（または高価な静的解析）よりもむしろ動的イントロスペクションにできるだけ依存し, メカニズム固有のオプションよりも宣言的目標による設定を優先すべきです
     \end{itemize}
 \end{frame}
 
 \begin{frame}{予測不可能な環境}
     \begin{itemize}
-        \item 動的な環境ではリソースのニーズが本質的に不確実で変化するため, 動的な内省ベースのアプローチも推奨される
-\item I
-\item さらに, ミッションプロファイルが進化し, ロボットがその動作に適応するにつれて, レイテンシの目標が変化する可能性があるため, 高レベルで目標指向のアプローチの必要性が高まります
+        \item また, SecIですでに説明したように, 動的環境におけるリソースニーズは本質的に不確実であり, 変化するため, 動的なイントロスペクションに基づくアプローチが望ましいと言えます
+        \item さらに, レイテンシの目標は, ミッションプロファイルが進化し, ロボットがその行動を適応させるにつれて変化する可能性があるため, 高レベルの目標指向アプローチの必要性が強化される
     \end{itemize}
 \end{frame}
 
 \begin{frame}{あると便利なペイロード}
     \begin{itemize}
-        \item 前のポイントと密接に関連しているが, ロボットが実際に全てのソフトウェア機能をあらゆる状況で維持するのに十分なコンピューティングリソースを備えていると仮定するのは, 素朴で誤った方向に進んでいる
-\item それどころか, 特に, スペース, 重量, 電力 (SWaP) の制約を受けるモバイルロボットでは, 「ほとんどの場合」動作するはずの「あると便利な」機能を含めることは珍しくないが, 厳密には必須ではなく, 条件が厳しくなった場合 (例えば, ミッションクリティカルだがセーフティクリティカルではないペイロード), 低下したレベルで動作する (または全く動作しない) ことが完全に予想される
-\item 実用的なレイテンシマネージャーは, このような重要でない機能の意図的な過少プロビジョニングを認識している必要がある
+        \item 前述と密接に関連しますが, ロボットが全てのソフトウェア機能をあらゆる状況で維持するのに十分な計算資源を備えていると仮定するのは甘く, 見当違いもいいところです
+        \item それどころか, 特にスペース, 重量, 電力（SWaP）の制約を受けるモバイルロボットでは, 「ほとんどの場合」動作するはずですが, 厳密には必須ではなく, 状況が厳しくなると劣化したレベルで動作する（または全く動作しない）ことが十分に予想される「いいとこ取り」の機能が含まれていることが珍しくありません（例えば, ミッションはあるが安全性が重要ではない積載物など）
+        \item 実用的なレイテンシ管理者は, このような非重要機能の意図的な過小提供を認識する必要がある
     \end{itemize}
 \end{frame}
 
 \begin{frame}{当然の過負荷動作}
     \begin{itemize}
-        \item 逆に, ロボットが一時的な過負荷の期間を経験することは異常ではない
-\item その性質上, このような期間は自動レイテンシマネージャーにとって最も困難な状況であり, 全てのレイテンシ目標を同時に満たすことはできないため, 難しい選択が必要になる
-\item 実用的なレイテンシマネージャーは, 過負荷下での不安定な意思決定や不安定な動作に陥ってはならない
-\item むしろ, Cause-effect chainのレイテンシを予測可能かつ適切に低下させることにより, 「驚き」を回避する必要がある
+        \item 逆に, ロボットが一時的な過負荷を経験することは, 決して珍しいことではありません
+        \item このような過負荷の状態は自動レイテンシ制御にとって最も困難な状況であり, 全てのレイテンシ目標を同時に満たすことができないため, 難しい選択を迫られることになります
+        \item 実用的なレイテンシマネージャは, 過負荷時に不規則な意思決定や不安定な動作に陥ってはならない
+        \item むしろ, 予測可能かつ優雅に因果関係の連チェーンのレイテンシを低下させることにより, 「驚き」を回避する必要があります
     \end{itemize}
 \end{frame}
 
-\begin{frame}{維持する}
+\begin{frame}{Earn your keep}
     \begin{itemize}
-        \item 最後になったが, レイテンシマネージャーで費やされる全てのプロセッササイクルは, 特に過負荷の期間中は, ワークロードで費やされないサイクルであることを強調する価値がある
-\item 実用的に言えば, CFS でのレイテンシの問題は, 追加のリソースを利用可能にするだけで軽減できることが多いため, アクティブなレイテンシマネージャーの存在がレイテンシ目標の遵守に関して実際に有益であるとは限りません
-\item 言い換えれば, レイテンシマネージャーは, そもそもそれを実行するコストを補うのに十分な利益を生み出す必要がある.したがって, 実装効率と, 採用されている分析の実行時間は非常に重要である
+        \item 最後になりますが, レイテンシマネージャに費やされるプロセッササイクルは, 特に過負荷の期間中は, ワークロードに費やされないサイクルとなることを強調しておく価値があります
+        \item 現実的には, CFS のレイテンシ問題は, 単に追加リソースを利用可能にすることで軽減できることが多いので, アクティブなレイテンシマネージャの存在が, レイテンシ目標の遵守という点で, 実際に有益であるとは言えません
+        \item 言い換えれば, レイテンシマネージャは, それを実行するコストを補うに足る十分な利点をもた らさなければならないのである
+        \item したがって, 実装の効率と, 採用する解析の実行時間は非常に重要
     \end{itemize}
 \end{frame}
