--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/background_and_definitions.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/background_and_definitions.tex
@@ -12,100 +12,91 @@
 \begin{frame}{ROS}
     \begin{itemize}
         \item ROS フレームワークは, ロボット工学アプリケーション向けの人気のあるオープンソースミドルウェアおよびコンポーネントリポジトリである [1]
-\item 本論文は特に, 第一世代のROSフレームワークの最近の主要なリファクタリングであるROS 2 [2]に関連している
-\item 簡潔にするために, 本論文ではバージョン番号を省略する
+        \item 本論文は特に, 第一世代のROSフレームワークの最近の主要なリファクタリングであるROS 2 [2]に関連している
+        \item 簡潔にするために, 本論文ではバージョン番号を省略する
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item ROS は, 通常 Linux に展開される成熟した機能豊富なミドルウェアである
-\item レイテンシ管理に不可欠な重要なランタイム要素であるトピック, コールバック, エグゼキュータに焦点を当てている
+        \item レイテンシ管理に不可欠な重要なランタイム要素であるトピック, コールバック, エグゼキュータに焦点を当てている
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item すでに述べたように, ROS は, 展開の選択をほとんど意識しない publishsubscribe インフラストラクチャを中心に構築されている
-\item したがって, ROS アプリケーションは, 複数のホスト, コア, プロセス, およびスレッドにまたがることができる
-\item 自動レイテンシ管理の目的で, 当然のスコープは, Linux を実行する共有メモリマルチコアシステムであり, ここでは注意を限定する
+        \item すでに述べたように, ROS は, 展開の選択をほとんど意識しない publish/subscribe インフラストラクチャを中心に構築されている
+        \item したがって, ROS アプリケーションは, 複数のホスト, コア, プロセス, およびスレッドにまたがることができる
+        \item 自動レイテンシ管理の目的では, Linux を実行する共有メモリマルチコアシステムが自然な範囲であり, 我々はここに注意を限定する
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item 概念レベルでのトピックとコールバックについては, セクション で既に説明した
-\item I
-\item 実装レベルでは, ROS アプリケーションは 1 つまたは複数のプロセスで構成され, 各プロセスは 1 つまたは複数のスレッドで構成され, 次にエグゼキュータ (すなわち, コールバックを呼び出す ROS ライブラリ機能) を実行する
-\item 各コールバックは, 特定のエグゼキュータに関連付けられている
-\item 新しいメッセージがトピックに投稿されると, ROS ミドルウェアは, トピックのsubscriberにサービスを提供するエグゼキュータをホストする全てのスレッドに, メッセージのコピーが確実に配信されるようにする
-\item 標準構成では, ROS は $D D S$ ミドルウェアに依存してエグゼキュータ間でメッセージを仲介する
-\item 複数の適切な DDS 実装が存在する [3-5]
+        \item 概念レベルでのトピックとコールバックについては, セクションI で既に説明した
+        \item 実装レベルでは, ROS アプリケーションは 1 つまたは複数のプロセスで構成され, 各プロセスは 1 つまたは複数のスレッドで構成され, 次にエグゼキュータ (すなわち, コールバックを呼び出す ROS ライブラリ機能) を実行する
+        \item 各コールバックは, 特定のエグゼキュータに関連付けられている
+        \item 新しいメッセージがトピックに投稿されると, ROS ミドルウェアは, トピックのsubscriberにサービスを提供するエグゼキュータをホストする全てのスレッドに, メッセージのコピーが確実に配信されるようにする
+        \item 標準的な構成では, ROSはエグゼキュータ間でメッセージを仲介するためにDDSミドルウェアに依存しており, 適切なDDS実装が複数存在する[3-5]
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item 新しいメッセージが利用可能であることがエグゼキュータに通知されると, 対応するコールバックがアクティブになり, 実行のためにキューに入れられる
-\item したがって, コールバックがメッセージを処理する際のレイテンシは, (i) OS がそれぞれのエグゼキュータをホストするスレッドに割り当てるプロセッサ時間と, (ii) エグゼキュータが保留中のシーケンスに起因するキューイングレイテンシの 2 つの主要な要因によって決定される
-\item コールバックのアクティベーション
+        \item したがって, コールバックがメッセージを処理するレイテンシは, 2つの主要な要因によって決定される (i) OSがそれぞれのエグゼキュータをホストするスレッドに割り当てるプロセッサ時間, および (ii) エグゼキュータが保留中のコールバックの起動をどのようにシーケンスするかによって発生する待ち行列のレイテンシ
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item 本論文の目的では, 側面 (i) のエグゼキュータスレッドのスケジューリングが主な関心事である
-\item これは, 自動レイテンシマネージャーが実行時に制御できる主な要因であるためである
-\item 側面 (ii) の待ち行列のレイテンシも, コールバックのレイテンシに大きな影響を与え, 分析するのは決して簡単ではない [6] が, (現在の ROS バージョンでは) ランタイム管理には適していない
+        \item これは, 自動レイテンシマネージャーが実行時に制御できる主な要因であるためである
+        \item 側面 (ii) の待ち行列のレイテンシも, コールバックのレイテンシに大きな影響を与え, 分析するのは決して簡単ではない [6] が, (現在の ROS バージョンでは) ランタイム管理には適していない
     \end{itemize}
 \end{frame}
 
 \begin{frame}{応答時間分析}
     \begin{itemize}
-        \item Casini らによる以前の研究に依存している
-\item [6] (ii) の場合, すなわち, ROS のデフォルトのエグゼキュータによって管理されるコールバックの応答時間を制限する
-\item カジノ等
-\item ROS システムをコールバックの有向非巡回グラフ (DAG) としてモデル化し, アクティベーションリレーションによって接続し, チェーンを処理するためのエグゼキュータを意識した最悪応答時間, すなわち, コールバック DAG の任意のパスのエンドツーエンドレイテンシの境界を提供する
-\item (*1): Casini らの処理チェーンは, ROS-Llama が管理するCause-effect chainに直接対応する
-\item (*1): 実際には, ROS アプリケーションは必ずしも非周期的ではない
+        \item 我々は, (ii), すなわち, ROSのデフォルトのエグゼキュータによって管理されるコールバックの応答時間を制限するために, Casiniらによる先行研究[6]に依存している
+        \item Casini らは, ROS システムを, アクティベーション関係によって接続されたコールバックの有向 非循環グラフ (DAG) としてモデル化し, 処理チェーン, すなわちコールバック DAG の任意のパスのエンドツーエンドレイテンシ境界について, 実行者を意識した最悪応答時間を提供しています
+        \begin{itemize}
+            \item 実際には, ROSアプリケーションは常に非周期的であるとは限らない
+            \item ROS-Llamaが抽出されたコールバックグラフのサイクルを回避する方法については, Sec.Vで説明する
+        \end{itemize}
     \end{itemize}
 \end{frame}
 
-\begin{frame}{留保}
+\begin{frame}{予約}
     \begin{itemize}
-        \item より正確には, Casini et al.各スレッドのサプライ 境界関数 (SBF) [7] が既知であるという仮定の下で, 最悪応答時間を提供する
-\item SBF は, 上記 (i) の特徴を表す
-\item すなわち, 特定の間隔で OS スケジューラによって割り当てられることが保証されるスレッドの処理時間である
-\item これにより, スケジューリング分析では, 長さ $\Delta$ の任意の間隔で $s b f(\Delta)$ 単位の処理時間を提供する分離されたコアで実行されているかのように, 各スレッドを分析できる
-\item このような SBF 保証を取得する標準的な方法は, 予約ベースのスケジューリングを使用することである
-\item これは, Linux では SCHED\_DEADLINE ポリシーによって実現される [8]
+        \item Casiniらは各スレッドの供給境界関数 (SBF) [7] が既知であるという仮定の下で, 最悪応答時間を提供する
+        \item SBFはあるスレッドがOSのスケジューラから与えられた区間にどれだけの処理時間を割り当てられることが保証されているかを特徴づける
+        \item これにより, スケジューリング分析では, 長さ $\Delta$ の任意の間隔で $s b f(\Delta)$ 単位の処理時間を提供する分離されたコアで実行されているかのように, 各スレッドを分析できる
+        \item このような SBF 保証を取得する標準的な方法は, 予約ベースのスケジューリングを使用することである
+        \item これは, Linux では SCHED\_DEADLINE ポリシーによって実現される [8]
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item SCHED\_DEADLINE スケジューラは, ハード固定帯域幅サーバ (H-CBS) [9] 予約スキームを GRUB [10] 帯域幅再利用と組み合わせて実装する
-\item 特定のスケジューリングルールは現時点では関係ないが, 各予約 $r$ はバジェット $\operatorname{budget}(r)$ と期間 $\operatorname{period}(r)$ によって特徴付けられることに注意
-\item スケジューラは, 各予約が $(r)$ の長さの期間の各期間に少なくともバジェット $(r)$ 単位のプロセッササービスを受け取ることを保証する
-\item 保証は, 帯域幅 $b w(r)=\frac{\operatorname{budget}(r)}{\text { period }(r)}$ としてより便利に指定される場合がある
+        \item 各予約 $r$ はバジェット $\operatorname{budget}(r)$ と期間 $\operatorname{period}(r)$ で特徴付けられ, スケジューラは各予約が期間$\operatorname{period}(r)$の各期間で少なくともバジェット$(r)$単位のプロセッササービスを受けることを保証していることに注意
+        \item 保証は, 帯域幅 $b w(r)=\frac{\operatorname{budget}(r)}{\text { period }(r)}$ としてより便利に指定される場合がある
     \end{itemize}
 \end{frame}
 
 \begin{frame}{到着曲線}
     \begin{itemize}
-        \item 抽出されたコールバックグラフで ROS-Llama がどのようにサイクルを回避するかについては, セクションで説明する
-\item V
-\item 各イングレスコールバック, すなわち, 外部イベントソースによってトリガされたコールバック
-\item イベントソース自体はコールバックではないが, 1 つ以上のトピックにメッセージを送信する (例えば, センサ値を取得してコールバック DAG に供給するデバイスドライバー)
-\item 到着曲線 $\eta_{c}(\Delta)$ は, 長さ $\Delta$ の任意の間隔でのコールバック $c$ のアクティベーションの最大数を制限する
+        \item Casiniらの分析[6]のもう一つの重要な仮定は, 各イングレスコールバック,  すなわち, 外部イベントソースによってトリガされたコールバックについて, 到着曲線が既知で あるということである
+        \item イベントソースは, それ自体がコールバックではなく, 1つ以上のトピックにメッセージを送る（例えば, センサー値を取得してコールバックDAGに送り込むデバイスドライバなど）
+        \item 到着曲線 $\eta_{c}(\Delta)$ は, 長さ $\Delta$ の任意の間隔でのコールバック $c$ のアクティベーションの最大数を制限する
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item 到着曲線と呼び出しごとの最悪実行時間 (WCET) $e_{c}$ が与えられると, コールバックのリクエスト 境界関数 (RBF) を $r b f_{c}(\Delta)=e_{c} \cdot \eta_{c}(\Delta)$ として決定するのは自明である
-\item 長さ $\Delta$ の間隔
-\item エグゼキュータの SBF とその全てのコールバックの RBF の相互作用は, Casini らの分析 [6] の中核にあり, 適用するにはシステムの内部に関するかなりのリアルタイムの専門知識と包括的な知識が必要であるという事実を強調している
-\item 彼らの分析
+        \item 到着曲線と呼び出しごとの最悪実行時間 (WCET) $e_{c}$ が与えられると, コールバックのリクエスト 境界関数 (RBF) を $r b f_{c}(\Delta)=e_{c} \cdot \eta_{c}(\Delta)$ として決定するのは簡単であり, これは, 長さ$\Delta$の間隔におけるコールバックcの全ての起動の最大累積プロセッサ需要を制限する
+        \item エグゼキュータの SBF とその全てのコールバックの RBF の相互作用は, Casini らの分析 [6] の中核にあり, その分析を適用するには, かなりのリアルタイム専門知識とシステム内部の包括的知識が必要であるという事実を浮き彫りにした
     \end{itemize}
 \end{frame}
