--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/evaluation.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/evaluation.tex
@@ -25,7 +25,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item ROS ナビゲーションスタック [18] は, ナビゲーションプランニング, パスフォローイング, および自己位置推定を含む, 車輪付き移動ロボット用の一般的なナビゲーションプリミティブを実装する
+        \item ROS ナビゲーションスタック [18] は, ナビゲーションプランニング, 経路追従, および自己位置推定を含む, 車輪付き移動ロボット用の一般的なナビゲーションプリミティブを実装する
 \item オブジェクトトラッカー [19] は, ビデオシーケンスを通じて指定されたオブジェクトを追跡し, 計算量の多いミッションクリティカルな (しかしセーフティクリティカルではない) ペイロードの典型的な例として機能する
     \end{itemize}
 \end{frame}
@@ -77,7 +77,7 @@
         \item ローカリゼーションの推定値は, 基礎となるレーザースキャンが取得された時刻から数えて 1 秒後にデッドライン切れになる
 \item これにより, ローカリゼーションコンポーネントにタイミングの制約が課される
 \item ローカリゼーションの推定がデッドライン切れになると, ロボットはナビゲートできず, 緊急停止を実行する
-\item そのため, レーザースキャナーと最終的なローカリゼーションコールバックの間のエンドツーエンドのレイテンシを最大 1 秒にする必要がある
+\item そのため, レーザースキャナーと最終的なローカリゼーションコールバックの間のエンドツーエンドレイテンシを最大 1 秒にする必要がある
     \end{itemize}
 \end{frame}
 
@@ -176,7 +176,7 @@
 \begin{frame}{}
     \begin{itemize}
         \item 観察されたゴール違反の理由を理解するために, 影響を受けるチェーンをより詳細に調査した
-\item 図 3 は, パイロットチェーンで観測されたエンドツーエンドのレイテンシの CDF を位相別に示している
+\item 図 3 は, パイロットチェーンで観測されたエンドツーエンドレイテンシの CDF を位相別に示している
 \item 垂直の破線はレイテンシの目標を示す曲線の全てのポイントがこの線の左側にある場合 (すなわち, 観察されたエンドツーエンドの最大レイテンシがチェーンのレイテンシの目標を超えない場合), 目標は常に達成される
     \end{itemize}
 \end{frame}
