--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/main.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/main.tex
@@ -12,7 +12,7 @@
 
 
 %%%%% Front Cover %%%%%
-\title{Automatic Latency Management for ROS2 Benefits Challenges and Open Problems}
+\title{Automatic Latency Management for ROS2: Benefits, Challenges, and Open Problems}
 \subtitle{IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS), 2021}
 \author{矢野 篤志}
 \date{\today}
@@ -26,23 +26,23 @@
 \maketitle
 
 % \summary{0}{0}
-% \input{abstract.tex}
+\input{abstract.tex}
 
 \begin{frame}{Outline}
     \setbeamertemplate{section in toc}[sections numbered]
     \scriptsize\tableofcontents[hideallsubsections]
 \end{frame}
 
-\input{prior_knowledge.tex}
+% \input{prior_knowledge.tex}
 \input{introduction.tex}
 \input{background_and_definitions.tex}
 \input{automatic_latency_management.tex}
-\input{design_of_ros_llama.tex}
-\input{practical_considerations.tex}
-\input{evaluation.tex}
-\input{open_problems_and_pragmatic_workarounds.tex}
-\input{related_work.tex}
-\input{conclusion.tex}
+% \input{design_of_ros_llama.tex}
+% \input{practical_considerations.tex}
+% \input{evaluation.tex}
+% \input{open_problems_and_pragmatic_workarounds.tex}
+% \input{related_work.tex}
+% \input{conclusion.tex}
 
 \lastpage
 
