--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/design_of_ros_llama.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/design_of_ros_llama.tex
@@ -6,48 +6,48 @@
 \begin{frame}{}
     \begin{itemize}
         \item 先ほど説明した観察と考慮事項に基づいて, ROS-Llama は, 純粋に宣言型の構成アプローチに従って, 大部分が自動的に動作するように設計された
-\item 具体的には, 必要なセットアップに関して, ROS-Llama が必要とするのは, システムインテグレーターがレイテンシに敏感である (すなわち, アクティブなレイテンシ管理が必要である) とみなす各Cause-effect chainのレイテンシ目標と, レイテンシに敏感な原因の間の劣化順序のみである
-\item 一時的な過負荷の場合に参照されるエフェクトチェーン
+        \item 具体的には, 必要なセットアップに関して, ROS-Llama が必要とするのは, システムインテグレーターがレイテンシに敏感である (すなわち, アクティブなレイテンシ管理が必要である) とみなす各cause-effectチェーンのレイテンシ目標と, レイテンシに敏感な原因の間の劣化順序のみである
+        \item 一時的な過負荷の場合に参照されるエフェクトチェーン
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item レイテンシの目標は, 原因と結果のチェーンに対して記述されており, 開始点と終点によってのみ識別される
-\item 例えば, ユーザは, レーザースキャナコールバックでの新しい測定値の到着と, 検出された障害物をマップに登録するコールバックの完了との間に通過できる最大 $200 \mathrm{~ms}$ を指定する場合がある
-\item Reqによって動機付けられた (a) および Req
-\item (e), これらのコールバックがどのように接続されているか, チェーンがトリガされる頻度, 各コールバックに必要なプロセッサ時間, および最終的にレイテンシの目標を達成するために関連するスレッドをどのようにスケジュールする必要があるかを決定するのは, ROS-Llama の責任である
+        \item レイテンシの目標は, cause-effectチェーンに対して記述されており, 開始点と終点によってのみ識別される
+        \item 例えば, ユーザは, レーザースキャナコールバックでの新しい測定値の到着と, 検出された障害物をマップに登録するコールバックの完了との間に通過できる最大 $200 \mathrm{~ms}$ を指定する場合がある
+        \item Reqによって動機付けられた (a) および Req
+        \item (e), これらのコールバックがどのように接続されているか, チェーンがトリガされる頻度, 各コールバックに必要なプロセッサ時間, および最終的にレイテンシの目標を達成するために関連するスレッドをどのようにスケジュールする必要があるかを決定するのは, ROS-Llama の責任である
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item Reqs によって導かれます
-\item (f)-(h), ROS-Llama を使用すると, システムインテグレーターは制御された劣化のポリシーを構成できる
-\item これは, 処理チェーンに関しても定義される
-\item ROSLlama が全てのレイテンシ目標を同時に保証できないと判断した場合, 一部のチェーンをベストエフォートモードに低下させます
-\item 提供された劣化ポリシーは, ROS-Llama がチェーンをプロビジョニングする順序を決定する
-\item これにより, 過負荷下での予測可能な動作が保証され, システムインテグレーターは, クリティカルチェーンが重要度の低いチェーンを優先してベストエフォートステータスに劣化することはない (Req
-\item (h)))
+        \item (f)-(h), ROS-Llama を使用すると, システムインテグレーターは制御された劣化のポリシーを構成できる
+        \item これは, 処理チェーンに関しても定義される
+        \item ROSLlama が全てのレイテンシ目標を同時に保証できないと判断した場合, 一部のチェーンをベストエフォートモードに低下させます
+        \item 提供された劣化ポリシーは, ROS-Llama がチェーンをプロビジョニングする順序を決定する
+        \item これにより, 過負荷下での予測可能な動作が保証され, システムインテグレーターは, クリティカルチェーンが重要度の低いチェーンを優先してベストエフォートステータスに劣化することはない (Req
+        \item (h)))
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item 構成された目標を実現するために, ROS-Llama は次の 3 つの主な問題を解決する必要がある
-\item 構成されたレイテンシの目標は可能な限り満たされ, チェーンをベストエフォートモードに低下させる必要があるかどうかを判断し, (3) (2) でプロビジョニングされた方法に従って全てのスレッドをスケジュールする
+        \item 構成されたレイテンシの目標は可能な限り満たされ, チェーンをベストエフォートモードに低下させる必要があるかどうかを判断し, (3) (2) でプロビジョニングされた方法に従って全てのスレッドをスケジュールする
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item 図 1 に示すように, ROS-Llama は, (1) と (2) にそれぞれ対応するモデルエクストラクタとバジェットマネージャで構成され, (3) には Linux の SCHED\_DEADLINE スケジューラを使用する
-\item 変化する要求 (要件 (f)) に対応するために, モデルエクストラクタは実行時にモデルを継続的に更新する
-\item 定期的に, バジェット管理者はこのモデルのスナップショットを取得し, スケジュールパラメーターの新しいセットを計算する
-\item これらは, SCHED\_DEADLINE によって実行される
-\item 本論文のケーススタディでは, これは 6 秒ごとに行われました
-\item ROS-Llama は, 常に最新のモデルに基づいて, 時間をかけて一連の静的システムとして扱うことにより, 動的な ROS システムを効果的にプロビジョニングする
-\item 次に, モデルエクストラクタから始めて, 各部分について順番に説明する
+        \item 変化する要求 (要件 (f)) に対応するために, モデルエクストラクタは実行時にモデルを継続的に更新する
+        \item 定期的に, バジェット管理者はこのモデルのスナップショットを取得し, スケジュールパラメーターの新しいセットを計算する
+        \item これらは, SCHED\_DEADLINE によって実行される
+        \item 本論文のケーススタディでは, これは 6 秒ごとに行われました
+        \item ROS-Llama は, 常に最新のモデルに基づいて, 時間をかけて一連の静的システムとして扱うことにより, 動的な ROS システムを効果的にプロビジョニングする
+        \item 次に, モデルエクストラクタから始めて, 各部分について順番に説明する
     \end{itemize}
 \end{frame}
 
@@ -58,62 +58,62 @@
 \begin{frame}{}
     \begin{itemize}
         \item モデルエクストラクタは, 実行中の ROS システムの動作を経時的に観察することで, その動作の経験的なタイミングモデルを計算する
-\item 具体的には, モデルエクストラクタは, システム内の関連する全てのスレッドを識別し, コールバックグラフ構造を回復し, 到着時間と実行時間を測定する必要がある
-\item この目的のために, ROSLlama モデルエクストラクタは, ROS コアライブラリ $\mathrm{rclcpp}$ および $\mathrm{rcl}$ を透過的に計測する
-\item これらのライブラリは全ての (C ベースの) ROS ノードで使用されるため, Req
-\item (d).
+        \item 具体的には, モデルエクストラクタは, システム内の関連する全てのスレッドを識別し, コールバックグラフ構造を回復し, 到着時間と実行時間を測定する必要がある
+        \item この目的のために, ROSLlama モデルエクストラクタは, ROS コアライブラリ $\mathrm{rclcpp}$ および $\mathrm{rcl}$ を透過的に計測する
+        \item これらのライブラリは全ての (C ベースの) ROS ノードで使用されるため, Req
+        \item (d).
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item インストルメンテーションは, コールバックが登録されたとき, 呼び出されたとき, publishされたとき, または完了したときにレポートする静的トレースポイントで構成される
-\item コールバック処理ループを開始することによってスレッドがエグゼキュータになったことを報告するスレッド識別用のトレースポイントと, 特定の API の使用を監視するための特別な目的のトレースポイント (例えば, 「サービス」を検出するため, 以下を参照) がある
+        \item コールバック処理ループを開始することによってスレッドがエグゼキュータになったことを報告するスレッド識別用のトレースポイントと, 特定の API の使用を監視するための特別な目的のトレースポイント (例えば, 「サービス」を検出するため, 以下を参照) がある
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item モデルエクストラクタは, トレースイベントのストリームに基づいて, コールバックアクティベーショングラフを段階的に構築する
-\item 各トレースイベントは, そのタイプ, 元のスレッド, タイムスタンプのペア, および追加のイベント固有のデータで構成される 2 つのタイムスタンプは, 異なるクロックに従って時間を測定する
-\item ウォールクロック時間を示すシステム全体のモノトニッククロックと, スレッドが受け取ったプロセッササービスの量を追跡するスレッドごとの $C P U$ タイムクロックである
-\item エクストラクタは, モノトニックタイムスタンプを使用して到着時間を推測し, CPU タイムクロックを使用して実行時間を測定する
+        \item 各トレースイベントは, そのタイプ, 元のスレッド, タイムスタンプのペア, および追加のイベント固有のデータで構成される 2 つのタイムスタンプは, 異なるクロックに従って時間を測定する
+        \item ウォールクロック時間を示すシステム全体のモノトニッククロックと, スレッドが受け取ったプロセッササービスの量を追跡するスレッドごとの $C P U$ タイムクロックである
+        \item エクストラクタは, モノトニックタイムスタンプを使用して到着時間を推測し, CPU タイムクロックを使用して実行時間を測定する
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item 新しいコールバックが登録されると, 対応するトレースイベントがコールバックのタイプとそれに関連付けられたトピックを報告する
-\item イベントレコードには, コールバックオブジェクトの仮想アドレスから派生した識別子がさらに含まれる
-\item これは, コールバックを一意に識別するために使用される
-\item これら 3 つのプロパティ (タイプ, トピック, 識別子) は登録時に決定され, コールバックの存続期間中は変更されない
+        \item イベントレコードには, コールバックオブジェクトの仮想アドレスから派生した識別子がさらに含まれる
+        \item これは, コールバックを一意に識別するために使用される
+        \item これら 3 つのプロパティ (タイプ, トピック, 識別子) は登録時に決定され, コールバックの存続期間中は変更されない
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item 追加の動的プロパティは, コールバックの実行開始, 完了, またはpublish時にpublishされるイベントから派生し, 継続的に更新される
-\item このような各トレースイベントには, 一意のコールバック識別子が含まれており, パブリケーションイベントの場合は, publish先のトピックが含まれている
-\item コールバックがpublishされるたびに, エクストラクタは, コールバックと報告されたトピックの間にエッジが存在しない場合は追加する
-\item コールバックが完了するたびに, エクストラクタはコールバックの実行時間曲線を更新する
-\item 同様に, 到着曲線は, publishイベントと開始イベントの発生に基づいて段階的に更新される
+        \item このような各トレースイベントには, 一意のコールバック識別子が含まれており, パブリケーションイベントの場合は, publish先のトピックが含まれている
+        \item コールバックがpublishされるたびに, エクストラクタは, コールバックと報告されたトピックの間にエッジが存在しない場合は追加する
+        \item コールバックが完了するたびに, エクストラクタはコールバックの実行時間曲線を更新する
+        \item 同様に, 到着曲線は, publishイベントと開始イベントの発生に基づいて段階的に更新される
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item モデルエクストラクタは, エグゼキュータを観察するだけでなく, 全てのイベントソース, すなわち, ROS システムと対話するがエグゼキュータ自体ではないスレッドを識別する必要もある
-\item このようなスレッドは, コールバックを開始せずにpublishするため, 簡単に認識できる
-\item 典型的な例は, ブロッキング I/O ループでデバイスファイルから読み取り, ROS メッセージにカプセル化された各新しいサンプルを中継するドライバーである
-\item ROS-Llama は, このようなスレッドを管理して, データ取得から始まるCause-effect chainのレイテンシを制御する必要がある
+        \item このようなスレッドは, コールバックを開始せずにpublishするため, 簡単に認識できる
+        \item 典型的な例は, ブロッキング I/O ループでデバイスファイルから読み取り, ROS メッセージにカプセル化された各新しいサンプルを中継するドライバーである
+        \item ROS-Llama は, このようなスレッドを管理して, データ取得から始まるcause-effectチェーンのレイテンシを制御する必要がある
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item コールバックに加えて, ROS API は callreturn セマンティクスを実現するサービスの概念も提供することに言及する価値がある
-\item しかし, 内部では, サービスは継続渡しアプローチを使用してレギュラーコールバックとして実装される (クライアントは, 特別な要求トピックにメッセージを投稿してサービスを呼び出し, どのトピックで応答を受け取りたいかを示す)
-\item したがって, モデルエクストラクタはサービスを検出して追跡し, 残りの ROS-Llama に対して透過的な方法でサービスを表すことができる
+        \item しかし, 内部では, サービスは継続渡しアプローチを使用してレギュラーコールバックとして実装される (クライアントは, 特別な要求トピックにメッセージを投稿してサービスを呼び出し, どのトピックで応答を受け取りたいかを示す)
+        \item したがって, モデルエクストラクタはサービスを検出して追跡し, 残りの ROS-Llama に対して透過的な方法でサービスを表すことができる
     \end{itemize}
 \end{frame}
 
@@ -130,61 +130,61 @@
 \begin{frame}{}
     \begin{itemize}
         \item しかし, バジェットマネージャーを詳しく見ていく前に, プロビジョニングされたスレッドが ROS-Llama によって実際にどのようにスケジュールされるかを理解する必要がある
-\item Reqのため (c) 実行可能な選択肢は 2 つだけである: 従来の POSIX 固定優先度スケジューラ (すなわち, SCHED\_FIFO または SCHED\_RR ポリシー) を使用するか, Linux のより最近の予約ベースの SCHED\_DEADLINE スケジューラに依存する
-\item 本論文は後者を選びました
+        \item Reqのため (c) 実行可能な選択肢は 2 つだけである: 従来の POSIX 固定優先度スケジューラ (すなわち, SCHED\_FIFO または SCHED\_RR ポリシー) を使用するか, Linux のより最近の予約ベースの SCHED\_DEADLINE スケジューラに依存する
+        \item 本論文は後者を選びました
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item 固定優先度オプションと比較して, SCHED\_DEADLINE には, 分析可能性と封じ込めという 2 つの主な利点がある
-\item 最も重要なことは, その便利な分析可能性は, Casini らによる ROS 処理チェーンの応答時間分析 [6] が, リソース予約でスケジュールされたエグゼキュータスレッドに直接適用されるという事実に由来することである (セクション II を思い出してください)
-\item この分析に基づいて, ROS-Llama のバジェット管理者は, 関連するチェーンの最悪レイテンシに対するプロビジョニングの決定の影響を, 「ミスステップ」を回避する安全な方法で予測できる
-\item すなわち, Req
-\item (b) これにより, ROS-Llama は, 因果関係を保証できるかどうか, またはベストエフォートモードに低下させる必要があるかどうかを自信を持って判断できる
+        \item 最も重要なことは, その便利な分析可能性は, Casini らによる ROS 処理チェーンの応答時間分析 [6] が, リソース予約でスケジュールされたエグゼキュータスレッドに直接適用されるという事実に由来することである (セクション II を思い出してください)
+        \item この分析に基づいて, ROS-Llama のバジェット管理者は, 関連するチェーンの最悪レイテンシに対するプロビジョニングの決定の影響を, 「ミスステップ」を回避する安全な方法で予測できる
+        \item すなわち, Req
+        \item (b) これにより, ROS-Llama は, 因果関係を保証できるかどうか, またはベストエフォートモードに低下させる必要があるかどうかを自信を持って判断できる
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item 封じ込めとは, プロセッサの需要が予期せず急増したスレッドが, 他のスレッドがプロビジョニングされたバジェットをタイムリーに受け取るのを防ぐことができないことを意味する
-\item このプロパティは, 一時的な過負荷の場合, またはロボットの環境の変化によりリソースの必要性が増加した場合に有益であり, Req
-\item （f）およびReq
-\item （チ）
-\item このような需要の急増は, モデルエクストラクタによって検出され, 次のタイミングモデルの更新に反映されるため, 次回のバジェットの再計算時に考慮される
+        \item このプロパティは, 一時的な過負荷の場合, またはロボットの環境の変化によりリソースの必要性が増加した場合に有益であり, Req
+        \item （f）およびReq
+        \item （チ）
+        \item このような需要の急増は, モデルエクストラクタによって検出され, 次のタイミングモデルの更新に反映されるため, 次回のバジェットの再計算時に考慮される
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item マルチコアプラットフォームでは, Linux は SCHED\_DEADLINE をインスタンス化する 2 つの方法を提供する
-\item スケジューラが現在の可用性に応じてスレッドをコア間で自由に移行するグローバルスケジューリングと, 各スレッドが特定のコアに割り当てられ, 他のスレッドが残っている場合でも分割スケジューリングである
-\item コアはアイドル状態である以前の研究では, 経験的に, パーティション化されたスケジューリングがほとんどのワークロードでより高いスケジューラビリティを実現することが示されている (すなわち, 予約の承認と保証においてはるかに効果的である) [11]
+        \item スケジューラが現在の可用性に応じてスレッドをコア間で自由に移行するグローバルスケジューリングと, 各スレッドが特定のコアに割り当てられ, 他のスレッドが残っている場合でも分割スケジューリングである
+        \item コアはアイドル状態である以前の研究では, 経験的に, パーティション化されたスケジューリングがほとんどのワークロードでより高いスケジューラビリティを実現することが示されている (すなわち, 予約の承認と保証においてはるかに効果的である) [11]
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item しかし, その有効性は, タスクからコアへのマッピングに大きく依存するため, ユーザに追加の負担がかかります (特に動的な環境では)
-\item Linux は, グローバルスケジューリングをデフォルトにすることで, この負担を回避する
-\item 一方, ROS-Llama は, 適切なマッピングを自動的に決定するのに十分な情報を持っているため, システムインテグレータに追加の負担をかけることなく分割スケジューリングを使用する (Req
-\item (e) を思い出してください)
+        \item Linux は, グローバルスケジューリングをデフォルトにすることで, この負担を回避する
+        \item 一方, ROS-Llama は, 適切なマッピングを自動的に決定するのに十分な情報を持っているため, システムインテグレータに追加の負担をかけることなく分割スケジューリングを使用する (Req
+        \item (e) を思い出してください)
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item 分割されたスケジューリングにより, ROS-Llama は自分自身と, 予約されたシステムコア上のさまざまなカーネルや DDS ミドルウェアスレッドなどのさまざまなシステムインフラストラクチャを簡単に分離できる
-\item 残りのコアは, バジェットマネージャーが ROS スレッドのプロビジョニングに使用できるようになる
+        \item 残りのコアは, バジェットマネージャーが ROS スレッドのプロビジョニングに使用できるようになる
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item ベストエフォートモードでチェーンのみを提供するエグゼキュータは, ROS-Llama によってプロビジョニングされず, 代わりに CFS によってスケジュールされる
-\item 特に, Req
-\item (b) ROS-Llama はチェーンを部分的にプロビジョニングすることはなく, スレッドに不十分なバジェットを提供する危険を冒すのではなく, 劣化したチェーンを最善の方法で提供する
-\item したがって, 劣化したチェーンは中断することなく動作し続け, 時間内に完了できるが, ROS-Llama はそれを保証できない
+        \item 特に, Req
+        \item (b) ROS-Llama はチェーンを部分的にプロビジョニングすることはなく, スレッドに不十分なバジェットを提供する危険を冒すのではなく, 劣化したチェーンを最善の方法で提供する
+        \item したがって, 劣化したチェーンは中断することなく動作し続け, 時間内に完了できるが, ROS-Llama はそれを保証できない
     \end{itemize}
 \end{frame}
 
@@ -201,89 +201,89 @@
 \begin{frame}{}
     \begin{itemize}
         \item 予約ベースのスケジューリングに関する文献では, 予約の期間は, 多くの場合, タスクの根底にある周期性から導出される [12-15]
-\item Req で説明されているように, エグゼキュータは異なる期間で複数のチェーンに影響を与えることが多いため, これは本論文の場合には不可能である
-\item (a)
-\item 明確な選択肢がないため, ROS-Llama は, 全ての予約に, 最も厳しいレイテンシ目標よりも大幅に短くなるように選択された均一な期間を割り当てるだけであるが, 過度のコンテキスト切り替えオーバヘッドを回避するのに十分な長さである
-\item 本論文のケーススタディでは, 一律の予約期間は $10 \mathrm{~ms}$ でした
+        \item Req で説明されているように, エグゼキュータは異なる期間で複数のチェーンに影響を与えることが多いため, これは本論文の場合には不可能である
+        \item (a)
+        \item 明確な選択肢がないため, ROS-Llama は, 全ての予約に, 最も厳しいレイテンシ目標よりも大幅に短くなるように選択された均一な期間を割り当てるだけであるが, 過度のコンテキスト切り替えオーバヘッドを回避するのに十分な長さである
+        \item 本論文のケーススタディでは, 一律の予約期間は $10 \mathrm{~ms}$ でした
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item 各予約に十分なバジェットを割り当てる方法も明らかではない
-\item 実際, 予約バジェットを単独で選択することはできないが, コールバックグラフの相互接続された性質のために, グローバルな共同最適化の問題を解決する必要がある
-\item スペースの制約により, 問題の正式な説明は省略するが, 根底にある直感は簡単に理解できる
-\item コールバックチェーンでは, 「アップストリーム」コールバックの応答時間の範囲によって, 「ダウンストリーム」コールバックのアクティベーションジッタが決まる
+        \item 実際, 予約バジェットを単独で選択することはできないが, コールバックグラフの相互接続された性質のために, グローバルな共同最適化の問題を解決する必要がある
+        \item スペースの制約により, 問題の正式な説明は省略するが, 根底にある直感は簡単に理解できる
+        \item コールバックチェーンでは, 「アップストリーム」コールバックの応答時間の範囲によって, 「ダウンストリーム」コールバックのアクティベーションジッタが決まる
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item 1 つのエグゼキュータのバジェットを変更すると, それが処理する全てのコールバックの最悪応答時間に影響を与えるため, 「ダウンストリーム」コールバックを提供するエグゼキュータの数に関係なく, 需要の変化を引き起こす可能性がある
-\item これは, これらのエグゼキュータの最悪応答時間に影響を与え, その時点で伝播効果が繰り返される
-\item さらに悪いことに, 影響サイクルが発生する可能性がある
-\item 各コールバックチェーンにはサイクルがないが, 2 つのエグゼキュータが複数のコールバックチェーンによって反対方向に接続される可能性がある
+        \item これは, これらのエグゼキュータの最悪応答時間に影響を与え, その時点で伝播効果が繰り返される
+        \item さらに悪いことに, 影響サイクルが発生する可能性がある
+        \item 各コールバックチェーンにはサイクルがないが, 2 つのエグゼキュータが複数のコールバックチェーンによって反対方向に接続される可能性がある
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item したがって, エグゼキュータ間に任意のバジェット依存関係が存在する可能性がある
-\item このような複雑な最適化問題を最適に解くことは, 特に Req
-\item （私）
-\item したがって, ROS-Llama は, 分解の逆順で各Cause-effect chainに対して実行される反復ヒューリスティック駆動の探索を使用して, (最適ではない) ソリューションを見つけようとする
+        \item このような複雑な最適化問題を最適に解くことは, 特に Req
+        \item （私）
+        \item したがって, ROS-Llama は, 分解の逆順で各cause-effectチェーンに対して実行される反復ヒューリスティック駆動の探索を使用して, (最適ではない) ソリューションを見つけようとする
     \end{itemize}
 \end{frame}
 
 \begin{frame}{開始点を見つける}
     \begin{itemize}
         \item アルゴリズム 1 を使用して, 各エグゼキュータの最大の長期プロセッサ要求を反映する初期バジェット割り当てを見つける
-\item 後の手順では帯域幅が追加されるだけで, 帯域幅が削除されることはないため, 有限の最悪応答時間を保証する最小の見積もりから始めることが望ましいである
+        \item 後の手順では帯域幅が追加されるだけで, 帯域幅が削除されることはないため, 有限の最悪応答時間を保証する最小の見積もりから始めることが望ましいである
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item 長期的な需要を見積もるには, 最初にホライズンと呼ばれる長い間隔での累積的な需要が決定される (2 行目)
-\item セクションで説明したケーススタディでは
-\item VI では, 任意に 10 秒の範囲を選択したが, これは全てのレイテンシ目標と典型的なビジーウィンドウの長さを超えている
-\item 前述の依存サイクルを断ち切るために, 実際の RBF は他のエグゼキュータのバジェットに依存する
-\item 行 2 は, 他の全てのエグゼキュータが $100 \%$ バジェットを受け取るという単純化した仮定の下で計算される
-\item 行 3 は, 結果として得られる初期バジェット見積もりを構成する
+        \item セクションで説明したケーススタディでは
+        \item VI では, 任意に 10 秒の範囲を選択したが, これは全てのレイテンシ目標と典型的なビジーウィンドウの長さを超えている
+        \item 前述の依存サイクルを断ち切るために, 実際の RBF は他のエグゼキュータのバジェットに依存する
+        \item 行 2 は, 他の全てのエグゼキュータが $100 \%$ バジェットを受け取るという単純化した仮定の下で計算される
+        \item 行 3 は, 結果として得られる初期バジェット見積もりを構成する
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item 初期バジェットを割り当てたので, 他のエグゼキュータが $100 \%$ 帯域幅を持っているという仮定を取り下げます
-\item その結果, ジッター効果の増加により, 一部のコールバックがスケジュール不能になる可能性がある
-\item これに対処するために, 4 行目から 10 行目は, 対応するエグゼキュータの帯域幅を, 地平線での長期的な需要が満たされるまで, またはエグゼキュータが $100 \%$ 帯域幅を超えなければならないまで繰り返し増加させます
-\item プロセスが開始される
+        \item その結果, ジッター効果の増加により, 一部のコールバックがスケジュール不能になる可能性がある
+        \item これに対処するために, 4 行目から 10 行目は, 対応するエグゼキュータの帯域幅を, 地平線での長期的な需要が満たされるまで, またはエグゼキュータが $100 \%$ 帯域幅を超えなければならないまで繰り返し増加させます
+        \item プロセスが開始される
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item 一般的なビンパッキングヒューリスティックで実行可能な予約からプロセッサへのマッピングが見つからない場合も, 11 行目で劣化プロセスが開始される
-\item [11] に従って, ROS-Llama は, ワーストフィットとファーストフィットの減少をこの順序で試みます
+        \item [11] に従って, ROS-Llama は, ワーストフィットとファーストフィットの減少をこの順序で試みます
     \end{itemize}
 \end{frame}
 
 \begin{frame}{バジェットの調整}
     \begin{itemize}
         \item アルゴリズム 2 は, (かろうじて) 有限の最悪応答時間を達成する最初のバジェットの割り当てに基づいて, 処理チェーンの最悪応答時間がチェーンの構成された待機時間の目標を超えなくなるまで, executor のバジェットを調整する
-\item この目的のために, ROS-Llama は, バジェット不足レイテンシヒューリスティック $d(e)$ と呼ばれるものに依存している
-\item これは, $100 \%$ 帯域幅よりも少ないエグゼキュータに起因する応答時間の合計増加である (4 行目)
-\item ここで, $R T(c)$ は実際の現在の最悪応答時間 [6] を表し, $R T^{100 \%}(c)$ は帯域幅を 100\% と仮定して得られる最悪応答時間を表す
-\item 大きなバジェット不足のレイテンシは, このエグゼキュータのバジェットを増やすと, システムの応答時間に大きなプラスの効果がある可能性が高いことを示している
+        \item この目的のために, ROS-Llama は, バジェット不足レイテンシヒューリスティック $d(e)$ と呼ばれるものに依存している
+        \item これは, $100 \%$ 帯域幅よりも少ないエグゼキュータに起因する応答時間の合計増加である (4 行目)
+        \item ここで, $R T(c)$ は実際の現在の最悪応答時間 [6] を表し, $R T^{100 \%}(c)$ は帯域幅を 100\% と仮定して得られる最悪応答時間を表す
+        \item 大きなバジェット不足のレイテンシは, このエグゼキュータのバジェットを増やすと, システムの応答時間に大きなプラスの効果がある可能性が高いことを示している
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item このヒューリスティックに続いて, ROS-Llama は影響を与えるエグゼキュータを不足レイテンシの順に検討する (5 行目から 10 行目)
-\item エグゼキュータごとに, チェーンのレイテンシの目標に達するまで, アルゴリズムは帯域幅を固定のステップサイズ (7 行目) だけ増加させようとする
-\item 収束速度と結果の品質の妥協点として $5 \%$ を選択した
-\item レイテンシの目標が満たされていない間にバジェットの増加の候補が見つからない場合は, 劣化プロセスが開始される (11 行目)
+        \item エグゼキュータごとに, チェーンのレイテンシの目標に達するまで, アルゴリズムは帯域幅を固定のステップサイズ (7 行目) だけ増加させようとする
+        \item 収束速度と結果の品質の妥協点として $5 \%$ を選択した
+        \item レイテンシの目標が満たされていない間にバジェットの増加の候補が見つからない場合は, 劣化プロセスが開始される (11 行目)
     \end{itemize}
 \end{frame}
