--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/introduction.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/introduction.tex
@@ -6,7 +6,7 @@
 \begin{frame}{}
     \begin{itemize}
         \item ロボット工学など, さまざまな研究分野で深い専門知識を必要とする複雑で学際的なアプリケーションドメインでは, 全てまたはほとんどのソフトウェアをゼロから作成することは通常, 選択肢ではない
-        \item 代わりに, ロボット工学者は一般に, ROS などの一般的なロボット工学フレームワークであるぐに利用できる標準機能を提供する既存のサードパーティコンポーネントの統合を採用している
+        \item その代わりに, ロボット工学者は, ROSのような一般的なロボット工学フレームワークで容易に利用でき, 標準機能を提供する既存のサードパーティコンポーネントの統合を採用するのが一般的である
         \item 利点は数多くあり, 簡単に確認できる
         \item 例えば, 複数の最先端の経路計画アルゴリズムと 3-D 視覚化サポートを備えた完全なナビゲーションスタックが 1 回ダウンロードするだけで済むのに, 新しいナビゲーションサブシステムを苦労して開発する必要はない
     \end{itemize}
@@ -15,7 +15,7 @@
 \begin{frame}{}
     \begin{itemize}
         \item 完全なロボティクスシステムを構築するには, 相互作用する多くのコンポーネントを統合する必要がある
-        \item ROS 開発プロセスの分散型オープンソースの性質により, これらのコンポーネントは通常, 必ずしもお互いを知っているわけではない複数の独立したコンポーネント開発者によって個別に開発される
+        \item ROS 開発プロセスの分散型オープンソースの性質により, これらのコンポーネントは通常, 必ずしもお互いを知っているわけではなく, 複数の独立したコンポーネント開発者によって個別に開発される
         \item 同様に, アプリケーションおよびミッション固有のロジックと「グルーコード」を使用して展開プラットフォーム上で選択されたコンポーネントを構成するシステムインテグレーターは, 通常, それぞれのコンポーネント開発者と緊密に連携しない
     \end{itemize}
 \end{frame}
@@ -27,26 +27,30 @@
         \item 特定のトピックに関連するメッセージがpublishされるたびに, 全てのsubscribe コールバックが呼び出され, 何らかの計算が実行される
         \item その後, 後続のメッセージが他のトピックにpublishされる可能性がある
         \item これにより, さらにコールバックがトリガされる
-        \item インテグレータは, あるコンポーネントの「入力コールバック」を別のコンポーネントの「出力トピック」に接続することによってコンポーネントを構成する
-        \item このように, ROS システムは, 相互接続されたトピックとコールバックの複雑なネットワークを形成する
-        \item そこでは, データ (環境刺激など) が原因と結果のチェーンに沿ってネットワークを介してイベント駆動型の方法で伝播し, インテグレーターが必要とするコンポーネントの境界を透過的に横断する
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item このような因果関係の典型的な例は, 経路上の障害物を検出して反応する必要がある移動ロボットのセンス計算-作動パイプラインである
-        \item 例えば, ハードウェアドライバーコンポーネントは, 例えばレーザースキャナー (原因) から新しいサンプルを取得し, 最終的に変更をもたらす前に, 複数のマッピング, 座標変換, 経路計画, およびホイール制御コンポーネントを通過する
-        \item ホイール速度 (効果)
-        \item 自明に, このようなデータ処理チェーンに沿った原因から結果までの最大レイテンシは, ロボットが正しく機能するために重要な役割を果たし, 多くの場合, 安全性を考慮する上でも重要である
+        \item インテグレータは, あるコンポーネントの「入力コールバック」を別のコンポーネントの「出力トピック」に接続することによってコンポーネントを構成する
+        \item このように, ROS システムは, 相互接続されたトピックとコールバックの複雑なネットワークを形成する
+        \item そこでは, データ (環境刺激など) がcause-effectチェーンに沿ってネットワークを介してイベント駆動型の方法で伝播し, インテグレーターが必要とするコンポーネントの境界を透過的に横断する
+    \end{itemize}
+\end{frame}
+
+
+\begin{frame}{}
+    \begin{itemize}
+        \item このようなcause-effectチェーンの典型的な例は, 経路上の障害物を検出して反応する必要がある移動ロボットのセンシング-計算-作動パイプラインである
+        \item 例えば, ハードウェアドライバコンポーネントがレーザースキャナから新しいサンプルを取得し（cause）, それが複数のマッピング, 座標変換, 経路計画, 車輪制御コンポーネントを経て, 最終的に車輪速度の変化（effect）につながる場合があります
+        \item 自明に, このようなデータ処理チェーンに沿ったcauseからeffectまでの最大レイテンシは, ロボットが正しく機能するために重要な役割を果たし, 多くの場合, 安全性を考慮する上でも重要である
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item 重要なのは, システムインテグレーターに可能な限り多くの展開の選択肢を残して, コンポーネントの再利用の機会を最大化するために, ROS の実行管理レイヤとその下にあるオペレーティングシステムがコンポーネント開発者に意図的に公開されていないことである
-        \item むしろ, ROS の中心的なコールバックの抽象化は, コールバックプロシージャがスケジュールされる方法やタイミング, コールバックの実行がスレッドまたはプロセス全体でどのように編成されるか, またはネットワーク層が送信を処理する方法を意識せずに, 実行から完了までのセマンティクスを備えた単なるプロシージャである
-        \item そしてメッセージの受信
+        \item むしろ, ROSの中心的なコールバック抽象化は, コールバック手続きがいつどのようにスケジュールされるか, コールバックの実行がスレッドまたはプロセスにわたってどのように組織されるか, またはネットワーキング層がメッセージの送信と受信をどのように処理するかを全く意識せずに, 実行から完了までセマンティクスを持つ単なる手続きである
     \end{itemize}
 \end{frame}
 
@@ -55,16 +59,16 @@
         \item ROS はオープンソースソフトウェアであるため, 原則として, システムの実行と通信動作を完全に理解し, 制御することが可能である
         \item したがって, リアルタイムの専門家の観点からは, リアルタイムシステム研究からのよく知られた手法で ROS を強化することは, 論理的なステップのように思えるかもしれない
         \item しかし, これを一見より難しくしているハードルがいくつかある
-        \item まず第一に, インテグレーターは必要な情報を欠いている
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
+        \item まず第一に, インテグレーターは必要な情報を欠いている
         \item ほとんどのリアルタイム分析では, 同時実行タスクの数, それらのアクティベーションセマンティクスと機能的相互作用, メッセージの到着パターン, 最悪実行時間など, 多くの低レベルシステムの詳細に関する深い知識が前提となる
-        \item ROS コンポーネントは含まれていない
-        \item この種の情報を提供するマニフェストを使用するさらに悪いことに, リアルタイム分析は, 誤った情報や不完全な情報にうまく対処できない
-        \item モデリング目的でサードパーティコンポーネントを手動でリバースエンジニアリングする際の 1 つの間違いや見落としが, 黙って全体の作業を無効にする可能性がある
+        \item ROSコンポーネントは, この種の情報を提供するマニフェストと一緒に来ることはありません
+        \item さらに悪いことに, リアルタイム解析は, 欠陥のある情報や不完全な情報にはうまく対応できない
+        \item モデリング目的でサードパーティコンポーネントを手動でリバースエンジニアリングする際の 1 つの間違いや見落としが, 全体の作業を無効にする可能性がある
     \end{itemize}
 \end{frame}
 
@@ -79,9 +83,9 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item これらのパラメータは, 汎用オブジェクト追跡コンポーネントの開発者が事前に把握したり修正したりすることはできない
+        \item これらのパラメータは, 汎用オブジェクトトラッキングコンポーネントの開発者が事前に把握したり修正したりすることはできない
         \item このようなユースケース固有の情報は, 特定のロボットを構築するインテグレーターのみが知っている
-        \item インテグレーターは, オブジェクト追跡やリアルタイムシステムの専門家である必要はなく, 特定の構成の選択の影響を常に予測できるわけではない
+        \item インテグレーターは, オブジェクトトラッキングやリアルタイムシステムの専門家である必要はなく, 特定の構成の選択の影響を常に予測できるわけではない
         \item したがって, コンポーネントのリソース要求とリアルタイム動作は, 特定の展開での使用のコンテキストで常に評価する必要がある
         \item これは, ROS フレームワークの人気の根底にある「ブラックボックス」コンポーネントのモジュール式再利用とは互換性がない
     \end{itemize}
@@ -97,17 +101,17 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item 例えば, 前述のオブジェクト追跡コンポーネントをもう一度考えてみよう
-        \item また, ロボットがランドマークベースの自己位置特定コンポーネントにも依存しているとする
+        \item 例えば, 前述のオブジェクトトラッキングコンポーネントをもう一度考えてみよう
+        \item ロボットがランドマークベースの自己位置特定コンポーネントにも依存しているとする
         \item 一方では, オブジェクトトラッカーは, 人口のまばらな田舎を移動する場合よりも, にぎやかな都市を移動する場合にはるかに多くのプロセッサ時間を必要とする
         \item 一方, 自己位置特定は, ほぼ均一な風景よりも, 認識可能なランドマークが多数ある都市の方がはるかに簡単である
-        \item 両方の状況で十分なリソースを保証するために, システムインテグレータは, 不毛の田園地帯からなる賑やかな都市にシステムをプロビジョニングする必要がある
+        \item 両方の状況で十分なリソースを保証するために, システムインテグレータは, 不毛の田園地帯からなる賑やかな都市にシステムを用意する必要がある
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item ロボット工学では, このような悲観的なシステムの寸法設定は, すぐに現実世界の限界に突き当たります
+        \item ロボット工学では, このような悲観的なシステムの寸法設定は, すぐに現実世界の限界に突き当たる
         \item 代わりに, 実用性とコスト効率を維持するために, ロボティクスシステムは, 各コンポーネントの個々のピーク需要の合計ではなく, 予想されるピーク関節リソース需要に合わせてプロビジョニングする必要がある
     \end{itemize}
 \end{frame}
@@ -116,27 +120,24 @@
     \begin{itemize}
         \item これらの課題を克服するために, 自動レイテンシマネージャーを使用して, 実行時にタイミングを意識した方法で ROS システムを動的にプロビジョニングすることを提案する
         \item 具体的には, 本論文では, ROS ライブレイテンシマネージャー (ROSLlama) を紹介する
-        \item これにより, 既存のリアルタイムメカニズムを使用して, 重要なCause-effect chainに沿ったレイテンシを制御できるようになる
-        \item 構成にほとんど手間がかかりません
+        \item これは, 既存のリアルタイム機構を利用して, 非リアルタイム専門家にとって使いやすく, かつ設定にほとんど手間がかからない方法で, 重要なcause-effectチェーンに沿ってレイテンシを制御できるようにするもの
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item ROS-Llama は, ユーザに複雑なシステムパラメーターを提供するよう求めるのではなく, イントロスペクションのみに依存し, 実行時に必要な全てのパラメーターを自動的に推定して, 状況の変化に応じてスケジューリングパラメーターを動的に調整する
-        \item 指定された全てのレイテンシ目標を同時に満たすことができない場合 (例えば, 悪環境条件によって引き起こされる一時的な過負荷が原因で), ROS-Llama は, システムインテグレータが因果関係の重要度を指定できるようにする, 制御された適切な劣化プロセスを開始する
-        \item 純粋に宣言的な方法でチェーンする (すなわち, Cause-effect chainが通過するコンポーネントを理解する必要はない)
+        \item もし, 指定されたレイテンシの目標が全て同時に達成できない場合（例えば, 不利な環境条件による一時的な過負荷が原因）, ROS-Llamaは制御された緩やかな劣化プロセスを開始し, システム統合者は純粋に宣言的方法で（すなわち, cause-effectチェーンが通過するコンポーネントを理解しなくても）cause-effectチェーンの重要性を指定することができるようにします
     \end{itemize}
 \end{frame}
 
 \begin{frame}{貢献}
     \begin{itemize}
-        \item  ロボティクス領域における動的レイテンシ管理の問題を調査し, 実用的なソリューションが満たさなければならない制約と要件を文書化する (セクション III)
+        \item  ロボティクス領域における動的レイテンシ管理の問題を調査し, 実用的なソリューションが満たさなければならない制約と要件を文書化する
 
-        \item  ROS 用の最初の自動レイテンシマネージャーである ROS-Llama の設計と実装を提示する (セクション IV)
-        \item と
+        \item  ROSのための最初の自動レイテンシマネージャであるROS-Llamaの設計と実装を紹介する
 
-        \item  ROS-Llama が, ストック Linux システムで標準 ROS コンポーネントを使用して移動ロボットのCause-effect chainレイテンシをうまく制御できることを実証する評価について報告する (セクション VI)
+        \item ROS-Llamaが, 標準的なLinuxシステム上で標準的なROSコンポーネントを使用して, 移動ロボットの因果関係チェーンのレイテンシをうまく制御できることを実証する評価について報告する
 
     \end{itemize}
 \end{frame}
@@ -148,6 +149,5 @@
         \item  ROS-Llama をより効果的かつ正確にする解析改善の機会
 
         \item  システムのさらなる改善の妨げとなっている ROS および Linux プラットフォームの主な制限
-
     \end{itemize}
 \end{frame}
